# Tonitru

./: .gitignore  COMMERCIAL.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE-MIT.md  LICENSE.md  README.md
public_docs/: README.md
src/: lib.rs
src/codec/: mod.rs  rcu.rs  types.rs  varint.rs
src/codec/decode/: basic.rs  basic_value_decoder.rs  batch.rs  batch_value_decoder.rs  complex.rs  complex_value_handler.rs  context.rs  decoder_state_machine.rs  htlv.rs  large_field_handler.rs  mod.rs  simd_optimizations.rs
src/codec/decode/basic_types/: boolean.rs  bytes_and_string.rs  floats.rs  i16.rs  i32.rs  i64.rs  i8.rs  integers.rs  mod.rs  null.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/codec/decode/complex_types/: array.rs  mod.rs  object.rs
src/codec/decode/pipeline_processor/: aligned_batch.rs  batch_processor.rs  float_processors.rs  integer_processors.rs  mod.rs  prefetch.rs  signed_integer_processors.rs
src/codec/decode/simd_optimizations/: batch_result.rs  float.rs  integer.rs  mod.rs  string.rs  tests.rs
src/codec/decode/simd_optimizations/aarch64/: mod.rs  neon.rs
src/codec/decode/simd_optimizations/x86_64/: avx2.rs  avx512.rs  mod.rs  sse41.rs
src/codec/encode/: basic.rs  complex.rs  htlv.rs  mod.rs
src/compress/: brotli.rs  incremental.rs  mod.rs  no_compression.rs  sharded.rs  strategy.rs  zstd.rs
src/encrypt/: aes_gcm.rs  chacha20_poly1305.rs  ecc.rs  field_level.rs  key_management.rs  kyber.rs  mod.rs
src/index/: mod.rs
src/internal/: error.rs  mod.rs  packet.rs
src/predicate/: mod.rs
src/protocol/: mod.rs
src/schema/: defaults.rs  inference.rs  mapper.rs  mod.rs  parser.rs  types.rs  utils.rs  validator.rs
src/wasm/: mod.rs
tests/: compress_integration_test.rs
tools/tonitru-cli/: Cargo.toml
tools/tonitru-cli/src/: main.rs
tools/tonitru-inspector/: Cargo.toml
tools/tonitru-inspector/src/: main.rs
