[workspace]
members = [
    ".", # The root crate (tonitru library)
    "tools/tonitru-cli",
    "tools/tonitru-inspector",
]

[package]
name = "tonitru"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Tonitru Network Native Data Format"
license = "MIT" # Or other appropriate license
repository = "https://github.com/your_username/tonitru-rust" # Replace with actual repo

[lib]
path = "src/lib.rs"

[dependencies]
# Core dependencies based on the plan
quinn = "0.10" # Or the latest compatible version
blake3 = "1.3" # Or the latest compatible version
zstd = "0.13"  # Or the latest compatible version
# Removed lz4_flex = "0.10"
brotli = "3.4" # Or the latest compatible version
aes-gcm = "0.10" # Or the latest compatible version
chacha20poly1305 = "0.10" # ChaCha20-Poly1305 encryption
kyber-rust = "0.2.1" # Or the latest compatible version
x25519-dalek = "2.0" # X25519 for ECC key exchange
sha2 = "0.10" # For key derivation
rand_core = "0.6" # For random number generation
hex = "0.4" # For hex encoding/decoding
consistent_hash = "0.1.4" # Or the latest compatible version
bloomfilter = "3.0.1" # Or the latest compatible version
reed-solomon-erasure = "6.0.0" # Or the latest compatible version
wasmtime = "17.0" # Or the latest compatible version
clap = { version = "4.0", features = ["derive"] } # Or the latest compatible version
libloading = "0.8" # Or the latest compatible version
thiserror = "1.0" # Add thiserror crate
bytes = "1.0" # Add bytes crate for zero-copy
byteorder = "1.4" # Add byteorder crate
bitflags = "2.0" # Add bitflags crate
bytemuck = { version = "1.13", features = ["derive"] } # Add bytemuck for safe type casting

[features]
default = []
simd = [] # Feature flag for SIMD optimizations

# Other potential dependencies will be added as needed