[package]
name = "tonitru-inspector"
version = "0.1.0"
edition = "2021"
description = "Inspector tool for Tonitru Network Native Data Format"
license = "MIT" # Or other appropriate license
repository = "https://github.com/your_username/tonitru-rust" # Replace with actual repo

[dependencies]
# Depend on the main tonitru library
tonitru = { path = "../.." }
# GUI or terminal visualization crate will be added later